ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
/* ... */
.qbGrid {
    //margin: 2px;

    flex: 1 1 auto;
    overflow: auto;
    display: block;
    width: 100%;
    border-collapse: initial; // needed for sticky column

    .qbIcon {
        font-size: $grid-group-expand-icon-size;
        width: $grid-group-expand-icon-size;
    }

    .cellEditIcon {
        display: none;
        color: $ghost-text-color;
        opacity: 0.6;
        position: absolute;
        top: 4px;
        right: 0;

        &:hover {
            color: $default-hover-color;
            opacity: 1;
            background-color: rgba($color-black-100, 0.6);
        }
    }

    .AlignRight .cellEditIcon {
        right: auto;
        left: 0;
    }

    .qbCell:hover .cellEditIcon {
        display: inline;
    }

    .qbCell .editingCell .cellEditIcon {
        display: none;
    }

    .emptyRowActions {
        min-height: $inline-edit-input-box-height;
        width: 75px;
    }

    .groupHeader {
        padding-left: $grid-default-group-padding + 3;
        vertical-align: top;
        font-weight: bold;
    }

    //assuming that we can have up to 6 group levels
    @for $i from 1 through 6 {
        .subHeaderLevel-#{$i} {
            .subHeaderCell {
                padding-left: $i * $grid-default-group-padding;
            }
        }
    }

    .dateCell, .durationCell, .phoneCell, .urlField {
        white-space: nowrap;
    }

    .AlignRight {
        text-align: right;
    }

    .AlignCenter {
        text-align: center;
    }

    .gridHeaderCell {
        display: flex;
        align-items: center;

        .gridHeaderLabel {
            flex-grow: 1;
            padding-right: 4px;
        }

        .headerMenu {
            flex-grow: 0;

            button {
                padding: 0;
                margin: 0;
                border: 0;
                background: inherit;
                width: $grid-group-expand-icon-size;
                height: $grid-group-expand-icon-size;
                opacity: 0.2;
            }

            .dropdown-menu {
                top: 120%; // TODO: temporary fix until we get the z-index corrected
            }
        }

        &:hover .headerMenu .dropdownToggle {
            opacity: 1;
        }
    }

    .cellWrapper {
        width: 100%;
        padding-top: 6px;
        position: relative;

        &.numberFormat,
        &.currencyFormat,
        &.percentFormat,
        &.durationFormat.wUnitsText {
            text-align: right;
        }

        &.checkboxFormat {
            text-align: center;
        }

        &.dateFormat, &.timeFormat {
            min-width: 120px;
        }

        &.dateTimeFormat {
            min-width: 210px;
        }
    }

    .editTools {
        z-index: $zindex-editTools;
        display: flex;
        flex-direction: column;
        flex: 0 0 auto;
        background-color: $qbgrid-cell-edit-background-color;
        box-shadow: -6px 0px 14px $qbgrid-row-box-shadow-color;
        position: absolute;
        top: -47px;
        left: -79px;
        padding: 0 24px;
        border: 1px solid $qbgrid-row-border-color;

        .loadedContent {
            padding: 0;
        }

        .loader {
            padding: 10px 9px;

            .spinner {
                // Need important because the original styles are set directly on the element by react-loader
                left: auto !important;
                top: auto !important;
            }
        }

        button {
            flex: 0 0 auto;
            border: 0;
            background-color: $qbgrid-cell-edit-background-color;
            margin-right: 2px;
            padding: 6px 4px;

            .qbIcon:hover {
                opacity: 1;
            }

            .qbIcon {
                opacity: 0.7;
                width: 20px;
                font-size: 16px;
                vertical-align: top;
            }

            .qbIcon.saveRecord {
                color: $color-green-700;
                font-size: 18px;
            }

            .qbIcon.invalidRecord {
                color: $tootip-error-color;
                font-size: 18px;
                cursor: default;
            }

            .qbIcon.cancelSelection {
                color: $iconfont-on-light-normal-color;
            }

            .qbIcon.deleteRecord {
                color: $color-red-700;
            }

            .qbIcon.addRecord {
                color: $iconfont-on-light-normal-color;
            }

            .qbIcon.disabled.addRecord {
                color: $iconfont-on-light-disabled-color;
            }
        }
    }

    .urlField .btn {
        margin-top: -5px;
        padding: 1px 10px;
    }

}

.qbGrid > thead > tr > th {
    min-width: 80px;
    position: relative;
    z-index: $zindex-qbGrid-th;
    white-space: nowrap;
    border-right: 1px solid $color-blue-400;
    border-bottom: 1px solid $badcolor1-color6;
    padding: $grid-default-cell-padding;
    color: $color-blue-600;
    -webkit-font-smoothing: antialiased;
    border-color: $color-blue-400;
    background-color: $color-blue-300;
}

.qbGrid .actionsCol {
    white-space: nowrap;

    > * {
        display: inline-block;
    }

    input[type=checkbox] {
        margin-right: 12px;
    }

    .iconActionButton {
        width: auto;
        margin-right: 4px;
        height: 30px;
    }

    .qbIcon {
        font-size: 20px;
        width: 20px;
    }
}

.qbGrid > tbody > tr > td {
    padding-left: 6px;
    padding-right: 6px;
    vertical-align: top;
    font-size: $grid-font-size;
    border-right: 1px solid $color-black-300;
    border-top: 1px solid $color-black-300;
    transition: border 100ms ease-out;
}

.qbGrid > tbody > tr:last-of-type > td {
    border-bottom: 1px solid $color-black-300;
}
/* ... */

